deployments/ping/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: ping
    spec:
      containers:
        - image: ewohltman/ping:latest
          imagePullPolicy: Always
          name: ping
          ports:
            - containerPort: 30001
          resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
