deployments/ping/ping.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ping
  labels:
    app: ping
    service: ping
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: ping
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping
  labels:
    app: ping
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping
      version: v1
  template:
    metadata:
      labels:
        app: ping
        version: v1
    spec:
      serviceAccountName: ping
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: ping
          image: ewohltman/ping:latest
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8080
