deployments/ping/service-ping.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ping
  labels:
    app: ping
    service: ping
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: ping
