deployments/ping/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ping
  labels:
    app: ping
spec:
  externalTrafficPolicy: Cluster
  type: NodePort
  ports:
    - name: http
      nodePort: 30000
      port: 30000
      targetPort: 30001
      protocol: TCP
  selector:
    app: ping
  sessionAffinity: None
