deployments/ping/virtualservice.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ping
spec:
  hosts:
    - "*"
  gateways:
    - ping-gateway
  http:
    - route:
        - destination:
            host: ping
            port:
              number: 80
